avanzamos en el pair

--- a/regresion_lineal/2_test_estadisticos.ipynb
+++ b/regresion_lineal/2_test_estadisticos.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -94,9 +94,7 @@
        "      <th>preschool</th>\n",
        "      <th>primary_school</th>\n",
        "      <th>apt_3beds_outcentre</th>\n",
-       "      <th>square_meter_incentre</th>\n",
        "      <th>monthly_salary</th>\n",
-       "      <th>mortgage</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -126,9 +124,7 @@
        "      <td>404.15</td>\n",
        "      <td>17902.55</td>\n",
        "      <td>1731.08</td>\n",
-       "      <td>22067.70</td>\n",
        "      <td>2689.62</td>\n",
-       "      <td>3.47</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -156,9 +152,7 @@
        "      <td>1382.62</td>\n",
        "      <td>26379.45</td>\n",
        "      <td>1561.59</td>\n",
-       "      <td>17746.11</td>\n",
        "      <td>1419.87</td>\n",
-       "      <td>5.03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -186,9 +180,7 @@
        "      <td>555.18</td>\n",
        "      <td>24556.21</td>\n",
        "      <td>688.05</td>\n",
-       "      <td>12892.82</td>\n",
        "      <td>1211.68</td>\n",
-       "      <td>5.19</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -216,9 +208,7 @@
        "      <td>107.07</td>\n",
        "      <td>3682.67</td>\n",
        "      <td>699.80</td>\n",
-       "      <td>6092.45</td>\n",
        "      <td>640.81</td>\n",
-       "      <td>7.96</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -246,52 +236,43 @@
        "      <td>74.00</td>\n",
        "      <td>1964.24</td>\n",
        "      <td>329.15</td>\n",
-       "      <td>2506.73</td>\n",
        "      <td>586.46</td>\n",
-       "      <td>8.06</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        city      country  mcdonalds  cappuccino  milk  rice  eggs  chicken  \\\n",
-       "0      Seoul  South Korea       6.15        3.93  2.20  3.53  4.04    10.58   \n",
+       "        city      country  mcdonalds  cappuccino  milk  rice  eggs  chicken   \n",
+       "0      Seoul  South Korea       6.15        3.93  2.20  3.53  4.04    10.58  \\\n",
        "1   Shanghai        China       5.69        3.98  2.74  1.22  2.22     4.86   \n",
        "2  Guangzhou        China       4.98        3.54  1.91  1.03  1.71     3.77   \n",
        "3     Mumbai        India       3.68        2.48  0.75  0.83  0.95     3.69   \n",
        "4      Delhi        India       4.30        1.77  0.73  0.85  1.02     3.81   \n",
        "\n",
-       "    beef  banana  water   wine  beer  cigarettes_marlboro  \\\n",
-       "0  41.61    3.71   1.05  15.36  2.12                 3.46   \n",
+       "    beef  banana  water   wine  beer  cigarettes_marlboro   \n",
+       "0  41.61    3.71   1.05  15.36  2.12                 3.46  \\\n",
        "1  13.12    1.60   0.64  14.24  0.94                 3.56   \n",
        "2  11.75    1.44   0.51  11.39  0.95                 3.70   \n",
        "3   5.95    0.67   0.35   9.83  2.27                 4.30   \n",
        "4   5.71    0.75   0.36   9.83  1.54                 4.30   \n",
        "\n",
-       "   public_transport_ticket  taxi  gasoline   basic  internet  gym_monthly  \\\n",
-       "0                     1.00  0.92      1.43  182.13     22.48        55.88   \n",
+       "   public_transport_ticket  taxi  gasoline   basic  internet  gym_monthly   \n",
+       "0                     1.00  0.92      1.43  182.13     22.48        55.88  \\\n",
        "1                     0.57  0.43      1.20   66.00     17.07        63.49   \n",
        "2                     0.36  0.37      1.19   59.65     16.66        34.17   \n",
        "3                     0.25  0.31      1.35   43.57      9.33        25.37   \n",
        "4                     0.49  0.22      1.24   58.07      7.95        21.20   \n",
        "\n",
-       "   cinema  preschool  primary_school  apt_3beds_outcentre  \\\n",
-       "0    9.60     404.15        17902.55              1731.08   \n",
-       "1    8.54    1382.62        26379.45              1561.59   \n",
-       "2    8.54     555.18        24556.21               688.05   \n",
-       "3    4.30     107.07         3682.67               699.80   \n",
-       "4    4.91      74.00         1964.24               329.15   \n",
-       "\n",
-       "   square_meter_incentre  monthly_salary  mortgage  \n",
-       "0               22067.70         2689.62      3.47  \n",
-       "1               17746.11         1419.87      5.03  \n",
-       "2               12892.82         1211.68      5.19  \n",
-       "3                6092.45          640.81      7.96  \n",
-       "4                2506.73          586.46      8.06  "
+       "   cinema  preschool  primary_school  apt_3beds_outcentre  monthly_salary  \n",
+       "0    9.60     404.15        17902.55              1731.08         2689.62  \n",
+       "1    8.54    1382.62        26379.45              1561.59         1419.87  \n",
+       "2    8.54     555.18        24556.21               688.05         1211.68  \n",
+       "3    4.30     107.07         3682.67               699.80          640.81  \n",
+       "4    4.91      74.00         1964.24               329.15          586.46  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +333,7 @@
        "1.5661484779734105"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +361,7 @@
        "KurtosistestResult(statistic=25.66045055290784, pvalue=3.232390479578833e-145)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +389,7 @@
        "<AxesSubplot:xlabel='basic', ylabel='Count'>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -431,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +421,7 @@
        "ShapiroResult(statistic=0.9131569862365723, pvalue=2.1159606811304738e-43)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
