añadimos sabiduria de cesar

--- a/2.regresion_logistica/rlogistica/1_eda.ipynb
+++ b/2.regresion_logistica/rlogistica/1_eda.ipynb
@@ -263,6 +263,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_prueba = pd.read_csv(\"../archivos/telco_customer_churn.csv\", na_values= ' ')   #esto es lo de cesar"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 40,
    "metadata": {},
    "outputs": [],
