cesar salva el dia

--- a/2.regresion_logistica/rlogistica/1_eda.ipynb
+++ b/2.regresion_logistica/rlogistica/1_eda.ipynb
@@ -267,7 +267,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_prueba = pd.read_csv(\"../archivos/telco_customer_churn.csv\", na_values= ' ')   #esto es lo de cesar"
+    "df_prueba = pd.read_csv(\"../archivos/telco_customer_churn.csv\", na_values= ' ')   #cd esto es lo de cesar"
    ]
   },
   {
