--- a/1.regresion_lineal/r_lineal/5_normalizacion.ipynb
+++ b/1.regresion_lineal/r_lineal/5_normalizacion.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -98,9 +98,7 @@
        "      <th>preschool</th>\n",
        "      <th>primary_school</th>\n",
        "      <th>apt_3beds_outcentre</th>\n",
-       "      <th>square_meter_incentre</th>\n",
        "      <th>monthly_salary</th>\n",
-       "      <th>mortgage</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -130,9 +128,7 @@
        "      <td>404.15</td>\n",
        "      <td>17902.55</td>\n",
        "      <td>1731.08</td>\n",
-       "      <td>22067.70</td>\n",
        "      <td>2689.62</td>\n",
-       "      <td>3.47</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -160,37 +156,31 @@
        "      <td>1382.62</td>\n",
        "      <td>26379.45</td>\n",
        "      <td>1561.59</td>\n",
-       "      <td>17746.11</td>\n",
        "      <td>1419.87</td>\n",
-       "      <td>5.03</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       city      country  mcdonalds  cappuccino  milk  rice  eggs  chicken   \n",
-       "0     Seoul  South Korea       6.15        3.93  2.20  3.53  4.04    10.58  \\\n",
+       "       city      country  mcdonalds  cappuccino  milk  rice  eggs  chicken  \\\n",
+       "0     Seoul  South Korea       6.15        3.93  2.20  3.53  4.04    10.58   \n",
        "1  Shanghai        China       5.69        3.98  2.74  1.22  2.22     4.86   \n",
        "\n",
-       "    beef  banana  water   wine  beer  cigarettes_marlboro   \n",
-       "0  41.61    3.71   1.05  15.36  2.12                 3.46  \\\n",
+       "    beef  banana  water   wine  beer  cigarettes_marlboro  \\\n",
+       "0  41.61    3.71   1.05  15.36  2.12                 3.46   \n",
        "1  13.12    1.60   0.64  14.24  0.94                 3.56   \n",
        "\n",
-       "   public_transport_ticket  taxi  gasoline   basic  internet  gym_monthly   \n",
-       "0                     1.00  0.92      1.43  182.13     22.48        55.88  \\\n",
+       "   public_transport_ticket  taxi  gasoline   basic  internet  gym_monthly  \\\n",
+       "0                     1.00  0.92      1.43  182.13     22.48        55.88   \n",
        "1                     0.57  0.43      1.20   66.00     17.07        63.49   \n",
        "\n",
-       "   cinema  preschool  primary_school  apt_3beds_outcentre   \n",
-       "0    9.60     404.15        17902.55              1731.08  \\\n",
-       "1    8.54    1382.62        26379.45              1561.59   \n",
-       "\n",
-       "   square_meter_incentre  monthly_salary  mortgage  \n",
-       "0               22067.70         2689.62      3.47  \n",
-       "1               17746.11         1419.87      5.03  "
+       "   cinema  preschool  primary_school  apt_3beds_outcentre  monthly_salary  \n",
+       "0    9.60     404.15        17902.55              1731.08         2689.62  \n",
+       "1    8.54    1382.62        26379.45              1561.59         1419.87  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +200,7 @@
        "0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +250,7 @@
        "ShapiroResult(statistic=0.9131569862365723, pvalue=2.1159606811304738e-43)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +279,7 @@
        "ShapiroResult(statistic=0.9894291162490845, pvalue=6.522045167761746e-17)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -317,12 +307,13 @@
     }
    ],
    "source": [
-    "sns.histplot(df['basic_boxcox']);"
+    "sns.histplot(df['basic_boxcox'])\n",
+    "plt.savefig('vr_intento_normalizacion.png');"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +322,7 @@
        "0.3779432231984016"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,22 +358,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mcdonalds, NO tiene distribución normal -> 3.3051341183991146e-29\n",
+      "mcdonalds, NO tiene distribución normal -> 3.4838724543004026e-29\n",
       "--------------------------------------------------------\n",
-      "cappuccino, NO tiene distribución normal -> 9.230846054182422e-30\n",
+      "cappuccino, NO tiene distribución normal -> 8.958853588520797e-30\n",
       "--------------------------------------------------------\n",
       "milk, NO tiene distribución normal -> 0.0\n",
       "--------------------------------------------------------\n",
       "rice, NO tiene distribución normal -> 0.0\n",
       "--------------------------------------------------------\n",
-      "eggs, NO tiene distribución normal -> 6.635597765125364e-38\n",
+      "eggs, NO tiene distribución normal -> 6.608482079321293e-38\n",
       "--------------------------------------------------------\n",
       "chicken, NO tiene distribución normal -> 0.0\n",
       "--------------------------------------------------------\n",
@@ -392,17 +383,17 @@
       "--------------------------------------------------------\n",
       "water, NO tiene distribución normal -> 0.0\n",
       "--------------------------------------------------------\n",
-      "wine, NO tiene distribución normal -> 6.700056373445534e-40\n",
+      "wine, NO tiene distribución normal -> 6.483023267290907e-40\n",
       "--------------------------------------------------------\n",
-      "beer, NO tiene distribución normal -> 9.618933048664842e-41\n",
+      "beer, NO tiene distribución normal -> 9.509071249061776e-41\n",
       "--------------------------------------------------------\n",
       "cigarettes_marlboro, NO tiene distribución normal -> 0.0\n",
       "--------------------------------------------------------\n",
       "public_transport_ticket, NO tiene distribución normal -> 0.0\n",
       "--------------------------------------------------------\n",
-      "taxi, NO tiene distribución normal -> 1.0906544168578986e-39\n",
+      "taxi, NO tiene distribución normal -> 1.0709563643448847e-39\n",
       "--------------------------------------------------------\n",
-      "gasoline, NO tiene distribución normal -> 1.128458819600963e-24\n",
+      "gasoline, NO tiene distribución normal -> 9.793950713047217e-25\n",
       "--------------------------------------------------------\n",
       "basic, NO tiene distribución normal -> 2.1159606811304738e-43\n",
       "--------------------------------------------------------\n",
@@ -410,7 +401,7 @@
       "--------------------------------------------------------\n",
       "gym_monthly, NO tiene distribución normal -> 0.0\n",
       "--------------------------------------------------------\n",
-      "cinema, NO tiene distribución normal -> 2.4922511491670716e-30\n",
+      "cinema, NO tiene distribución normal -> 2.476649800063862e-30\n",
       "--------------------------------------------------------\n",
       "preschool, NO tiene distribución normal -> 0.0\n",
       "--------------------------------------------------------\n",
@@ -418,11 +409,7 @@
       "--------------------------------------------------------\n",
       "apt_3beds_outcentre, NO tiene distribución normal -> 0.0\n",
       "--------------------------------------------------------\n",
-      "square_meter_incentre, NO tiene distribución normal -> 0.0\n",
-      "--------------------------------------------------------\n",
       "monthly_salary, NO tiene distribución normal -> 0.0\n",
-      "--------------------------------------------------------\n",
-      "mortgage, NO tiene distribución normal -> 0.0\n",
       "--------------------------------------------------------\n",
       "basic_boxcox, NO tiene distribución normal -> 6.522045167761746e-17\n",
       "--------------------------------------------------------\n"
@@ -448,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -496,9 +483,7 @@
        "      <th>preschool</th>\n",
        "      <th>primary_school</th>\n",
        "      <th>apt_3beds_outcentre</th>\n",
-       "      <th>square_meter_incentre</th>\n",
        "      <th>monthly_salary</th>\n",
-       "      <th>mortgage</th>\n",
        "      <th>basic_boxcox</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -529,9 +514,7 @@
        "      <td>404.15</td>\n",
        "      <td>17902.55</td>\n",
        "      <td>1731.08</td>\n",
-       "      <td>22067.70</td>\n",
        "      <td>2689.62</td>\n",
-       "      <td>3.47</td>\n",
        "      <td>16.271842</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -560,9 +543,7 @@
        "      <td>1382.62</td>\n",
        "      <td>26379.45</td>\n",
        "      <td>1561.59</td>\n",
-       "      <td>17746.11</td>\n",
        "      <td>1419.87</td>\n",
-       "      <td>5.03</td>\n",
        "      <td>10.244243</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -591,9 +572,7 @@
        "      <td>555.18</td>\n",
        "      <td>24556.21</td>\n",
        "      <td>688.05</td>\n",
-       "      <td>12892.82</td>\n",
        "      <td>1211.68</td>\n",
-       "      <td>5.19</td>\n",
        "      <td>9.760717</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -622,9 +601,7 @@
        "      <td>107.07</td>\n",
        "      <td>3682.67</td>\n",
        "      <td>699.80</td>\n",
-       "      <td>6092.45</td>\n",
        "      <td>640.81</td>\n",
-       "      <td>7.96</td>\n",
        "      <td>8.371859</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -653,9 +630,7 @@
        "      <td>74.00</td>\n",
        "      <td>1964.24</td>\n",
        "      <td>329.15</td>\n",
-       "      <td>2506.73</td>\n",
        "      <td>586.46</td>\n",
-       "      <td>8.06</td>\n",
        "      <td>9.635477</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -663,43 +638,43 @@
        "</div>"
       ],
       "text/plain": [
-       "        city      country  mcdonalds  cappuccino  milk  rice  eggs  chicken   \n",
-       "0      Seoul  South Korea       6.15        3.93  2.20  3.53  4.04    10.58  \\\n",
+       "        city      country  mcdonalds  cappuccino  milk  rice  eggs  chicken  \\\n",
+       "0      Seoul  South Korea       6.15        3.93  2.20  3.53  4.04    10.58   \n",
        "1   Shanghai        China       5.69        3.98  2.74  1.22  2.22     4.86   \n",
        "2  Guangzhou        China       4.98        3.54  1.91  1.03  1.71     3.77   \n",
        "3     Mumbai        India       3.68        2.48  0.75  0.83  0.95     3.69   \n",
        "4      Delhi        India       4.30        1.77  0.73  0.85  1.02     3.81   \n",
        "\n",
-       "    beef  banana  water   wine  beer  cigarettes_marlboro   \n",
-       "0  41.61    3.71   1.05  15.36  2.12                 3.46  \\\n",
+       "    beef  banana  water   wine  beer  cigarettes_marlboro  \\\n",
+       "0  41.61    3.71   1.05  15.36  2.12                 3.46   \n",
        "1  13.12    1.60   0.64  14.24  0.94                 3.56   \n",
        "2  11.75    1.44   0.51  11.39  0.95                 3.70   \n",
        "3   5.95    0.67   0.35   9.83  2.27                 4.30   \n",
        "4   5.71    0.75   0.36   9.83  1.54                 4.30   \n",
        "\n",
-       "   public_transport_ticket  taxi  gasoline   basic  internet  gym_monthly   \n",
-       "0                     1.00  0.92      1.43  182.13     22.48        55.88  \\\n",
+       "   public_transport_ticket  taxi  gasoline   basic  internet  gym_monthly  \\\n",
+       "0                     1.00  0.92      1.43  182.13     22.48        55.88   \n",
        "1                     0.57  0.43      1.20   66.00     17.07        63.49   \n",
        "2                     0.36  0.37      1.19   59.65     16.66        34.17   \n",
        "3                     0.25  0.31      1.35   43.57      9.33        25.37   \n",
        "4                     0.49  0.22      1.24   58.07      7.95        21.20   \n",
        "\n",
-       "   cinema  preschool  primary_school  apt_3beds_outcentre   \n",
-       "0    9.60     404.15        17902.55              1731.08  \\\n",
-       "1    8.54    1382.62        26379.45              1561.59   \n",
-       "2    8.54     555.18        24556.21               688.05   \n",
-       "3    4.30     107.07         3682.67               699.80   \n",
-       "4    4.91      74.00         1964.24               329.15   \n",
+       "   cinema  preschool  primary_school  apt_3beds_outcentre  monthly_salary  \\\n",
+       "0    9.60     404.15        17902.55              1731.08         2689.62   \n",
+       "1    8.54    1382.62        26379.45              1561.59         1419.87   \n",
+       "2    8.54     555.18        24556.21               688.05         1211.68   \n",
+       "3    4.30     107.07         3682.67               699.80          640.81   \n",
+       "4    4.91      74.00         1964.24               329.15          586.46   \n",
        "\n",
-       "   square_meter_incentre  monthly_salary  mortgage  basic_boxcox  \n",
-       "0               22067.70         2689.62      3.47     16.271842  \n",
-       "1               17746.11         1419.87      5.03     10.244243  \n",
-       "2               12892.82         1211.68      5.19      9.760717  \n",
-       "3                6092.45          640.81      7.96      8.371859  \n",
-       "4                2506.73          586.46      8.06      9.635477  "
+       "   basic_boxcox  \n",
+       "0     16.271842  \n",
+       "1     10.244243  \n",
+       "2      9.760717  \n",
+       "3      8.371859  \n",
+       "4      9.635477  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -710,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
