repasamos la reg lineal

--- a/1.regresion_lineal-paloma/r_lineal/2_test_estadisticos.ipynb
+++ b/1.regresion_lineal-paloma/r_lineal/2_test_estadisticos.ipynb
@@ -416,6 +416,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Nuestra concentración de datos no se encuentra en el centro. No tiene sentido calcular la kurtosis porque nuestra variable no sigue una distribución normal."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "5- ¿Es vuestra variable respuesta normal? Demostrarlo visual y analíticamente."
    ]
   },
