--- a/1.regresion_lineal-paloma/r_lineal/5_normalizacion.ipynb
+++ b/1.regresion_lineal-paloma/r_lineal/5_normalizacion.ipynb
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
        "ShapiroResult(statistic=0.9166607856750488, pvalue=2.802596928649634e-44)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
        "ShapiroResult(statistic=0.9899473190307617, pvalue=2.695348339105462e-17)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +344,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>city</th>\n",
        "      <th>country</th>\n",
        "      <th>mcdonalds</th>\n",
        "      <th>cappuccino</th>\n",
@@ -368,16 +367,13 @@
        "      <th>preschool</th>\n",
        "      <th>primary_school</th>\n",
        "      <th>apt_3beds_outcentre</th>\n",
-       "      <th>square_meter_incentre</th>\n",
        "      <th>monthly_salary</th>\n",
-       "      <th>mortgage</th>\n",
        "      <th>basic_boxcox</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Seoul</td>\n",
        "      <td>South Korea</td>\n",
        "      <td>6.15</td>\n",
        "      <td>3.93</td>\n",
@@ -401,14 +397,11 @@
        "      <td>404.15</td>\n",
        "      <td>17902.55</td>\n",
        "      <td>1731.08</td>\n",
-       "      <td>22067.70</td>\n",
        "      <td>2689.62</td>\n",
-       "      <td>3.47</td>\n",
-       "      <td>16.271842</td>\n",
+       "      <td>16.684542</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Shanghai</td>\n",
        "      <td>China</td>\n",
        "      <td>5.69</td>\n",
        "      <td>3.98</td>\n",
@@ -432,14 +425,11 @@
        "      <td>1382.62</td>\n",
        "      <td>26379.45</td>\n",
        "      <td>1561.59</td>\n",
-       "      <td>17746.11</td>\n",
        "      <td>1419.87</td>\n",
-       "      <td>5.03</td>\n",
-       "      <td>10.244243</td>\n",
+       "      <td>10.443987</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Guangzhou</td>\n",
        "      <td>China</td>\n",
        "      <td>4.98</td>\n",
        "      <td>3.54</td>\n",
@@ -463,14 +453,11 @@
        "      <td>555.18</td>\n",
        "      <td>24556.21</td>\n",
        "      <td>688.05</td>\n",
-       "      <td>12892.82</td>\n",
        "      <td>1211.68</td>\n",
-       "      <td>5.19</td>\n",
-       "      <td>9.760717</td>\n",
+       "      <td>9.945543</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Mumbai</td>\n",
        "      <td>India</td>\n",
        "      <td>3.68</td>\n",
        "      <td>2.48</td>\n",
@@ -494,14 +481,11 @@
        "      <td>107.07</td>\n",
        "      <td>3682.67</td>\n",
        "      <td>699.80</td>\n",
-       "      <td>6092.45</td>\n",
        "      <td>640.81</td>\n",
-       "      <td>7.96</td>\n",
-       "      <td>8.371859</td>\n",
+       "      <td>8.515986</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Delhi</td>\n",
        "      <td>India</td>\n",
        "      <td>4.30</td>\n",
        "      <td>1.77</td>\n",
@@ -525,53 +509,44 @@
        "      <td>74.00</td>\n",
        "      <td>1964.24</td>\n",
        "      <td>329.15</td>\n",
-       "      <td>2506.73</td>\n",
        "      <td>586.46</td>\n",
-       "      <td>8.06</td>\n",
-       "      <td>9.635477</td>\n",
+       "      <td>9.816500</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        city      country  mcdonalds  cappuccino  milk  rice  eggs  chicken   \n",
-       "0      Seoul  South Korea       6.15        3.93  2.20  3.53  4.04    10.58  \\\n",
-       "1   Shanghai        China       5.69        3.98  2.74  1.22  2.22     4.86   \n",
-       "2  Guangzhou        China       4.98        3.54  1.91  1.03  1.71     3.77   \n",
-       "3     Mumbai        India       3.68        2.48  0.75  0.83  0.95     3.69   \n",
-       "4      Delhi        India       4.30        1.77  0.73  0.85  1.02     3.81   \n",
+       "       country  mcdonalds  cappuccino  milk  rice  eggs  chicken   beef   \n",
+       "0  South Korea       6.15        3.93  2.20  3.53  4.04    10.58  41.61  \\\n",
+       "1        China       5.69        3.98  2.74  1.22  2.22     4.86  13.12   \n",
+       "2        China       4.98        3.54  1.91  1.03  1.71     3.77  11.75   \n",
+       "3        India       3.68        2.48  0.75  0.83  0.95     3.69   5.95   \n",
+       "4        India       4.30        1.77  0.73  0.85  1.02     3.81   5.71   \n",
        "\n",
-       "    beef  banana  water   wine  beer  cigarettes_marlboro   \n",
-       "0  41.61    3.71   1.05  15.36  2.12                 3.46  \\\n",
-       "1  13.12    1.60   0.64  14.24  0.94                 3.56   \n",
-       "2  11.75    1.44   0.51  11.39  0.95                 3.70   \n",
-       "3   5.95    0.67   0.35   9.83  2.27                 4.30   \n",
-       "4   5.71    0.75   0.36   9.83  1.54                 4.30   \n",
+       "   banana  water   wine  beer  cigarettes_marlboro  public_transport_ticket   \n",
+       "0    3.71   1.05  15.36  2.12                 3.46                     1.00  \\\n",
+       "1    1.60   0.64  14.24  0.94                 3.56                     0.57   \n",
+       "2    1.44   0.51  11.39  0.95                 3.70                     0.36   \n",
+       "3    0.67   0.35   9.83  2.27                 4.30                     0.25   \n",
+       "4    0.75   0.36   9.83  1.54                 4.30                     0.49   \n",
        "\n",
-       "   public_transport_ticket  taxi  gasoline   basic  internet  gym_monthly   \n",
-       "0                     1.00  0.92      1.43  182.13     22.48        55.88  \\\n",
-       "1                     0.57  0.43      1.20   66.00     17.07        63.49   \n",
-       "2                     0.36  0.37      1.19   59.65     16.66        34.17   \n",
-       "3                     0.25  0.31      1.35   43.57      9.33        25.37   \n",
-       "4                     0.49  0.22      1.24   58.07      7.95        21.20   \n",
+       "   taxi  gasoline   basic  internet  gym_monthly  cinema  preschool   \n",
+       "0  0.92      1.43  182.13     22.48        55.88    9.60     404.15  \\\n",
+       "1  0.43      1.20   66.00     17.07        63.49    8.54    1382.62   \n",
+       "2  0.37      1.19   59.65     16.66        34.17    8.54     555.18   \n",
+       "3  0.31      1.35   43.57      9.33        25.37    4.30     107.07   \n",
+       "4  0.22      1.24   58.07      7.95        21.20    4.91      74.00   \n",
        "\n",
-       "   cinema  preschool  primary_school  apt_3beds_outcentre   \n",
-       "0    9.60     404.15        17902.55              1731.08  \\\n",
-       "1    8.54    1382.62        26379.45              1561.59   \n",
-       "2    8.54     555.18        24556.21               688.05   \n",
-       "3    4.30     107.07         3682.67               699.80   \n",
-       "4    4.91      74.00         1964.24               329.15   \n",
-       "\n",
-       "   square_meter_incentre  monthly_salary  mortgage  basic_boxcox  \n",
-       "0               22067.70         2689.62      3.47     16.271842  \n",
-       "1               17746.11         1419.87      5.03     10.244243  \n",
-       "2               12892.82         1211.68      5.19      9.760717  \n",
-       "3                6092.45          640.81      7.96      8.371859  \n",
-       "4                2506.73          586.46      8.06      9.635477  "
+       "   primary_school  apt_3beds_outcentre  monthly_salary  basic_boxcox  \n",
+       "0        17902.55              1731.08         2689.62     16.684542  \n",
+       "1        26379.45              1561.59         1419.87     10.443987  \n",
+       "2        24556.21               688.05         1211.68      9.945543  \n",
+       "3         3682.67               699.80          640.81      8.515986  \n",
+       "4         1964.24               329.15          586.46      9.816500  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -582,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
